--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ install:
   - pip install -r requirements.txt
 
 script:
-  - pytest tests/
+  - pytest eureka/tests/
 
 # cache:
 #   directories:
