--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,10 @@ python:
   - '3.7'
   - '3.6'
 
-sudo: true
+sudo: false
 
 os:
-   #- linux
-   - osx
+   - linux
 
 install:
   - pip install -r requirements.txt
