--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,14 @@ python:
   - '3.7'
   - '3.6'
 
+env:
+  - NUMPY_VERSION=1.16.0
+  - NUMPY_VERSION=1.17.0
+  - NUMPY_VERSION=1.18.0
+  - NUMPY_VERSION=1.19.0
+  - NUMPY_VERSION=1.19.2
+
+
 sudo: false
 
 os:
