--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,10 @@ python:
   - '3.6'
 
 env:
-  - NUMPY_VERSION=1.18.0
-  - NUMPY_VERSION=1.19.0
-  - NUMPY_VERSION=1.19.2
-
+    global:
+        # default environment variables
+        - NUMPY_VERSION=stable
+        - ASTROPY_VERSION=stable
 
 sudo: false
 
