--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,6 @@ env:
 os:
    - linux
 
-before_install:
-  - pip install virtualenv==16.3.0
-
 install:
   - pip install -r requirements.txt
 
@@ -33,6 +30,7 @@ script:
 #   - export EXOCTK_DATA="$HOME/exoctk_data/"
 #   - chmod +x ci/install_conda.sh
 #   - chmod +x ci/setup_conda_env.sh
+#   - pip install virtualenv==16.3.0
 
 # install:
 #   - ci/install_conda.sh
