--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ os:
    - linux
 
 install:
-  - pip install -r requirements.txt
+  - pip3 install -r requirements.txt
 
 script:
   - pytest eureka/tests/
