--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,23 @@
-language: python
 
-python:
-  - '3.7'
-  - '3.6'
 
 env:
   - NUMPY_VERSION=1.18.0
-
-os:
-   - linux
 
 install:
   - pip install -r requirements.txt
 
 script:
   - pytest eureka/tests/
+
+matrix:
+  include:
+    - os: linux
+      language: python
+      env: PYTHON_VERSION=3.7
+    - os: linux
+      language: python
+      env: PYTHON_VERSION=3.6
+
 
 # cache:
 #   directories:
