--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,15 @@
 language: python
 
+python:
+  - '3.7'
+  - '3.6'
+os:
+   - linux
 env:
   - NUMPY_VERSION=1.18.0
 
 install:
   - pip install -r requirements.txt
-
-matrix:
-  include:
-    - os: linux
-      language: python
-      env: PYTHON_VERSION=3.7
-    - os: linux
-      language: python
-      env: PYTHON_VERSION=3.6
 
 script:
   - pytest eureka/tests/
