--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,10 @@ os:
 env:
   - NUMPY_VERSION=1.18.0
 
+before_install :
+  - pip install -U pip
+  - python setup.py install
+
 install:
   - pip install -r requirements.txt
 
