--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,16 @@ language: python
 
 python:
   - '3.7'
-  - '3.6'
-
-sudo: false
+  - '3.8'
 
 os:
    - linux
+
+before_install:
+  - python setup.py install
+
+env:
+  - NUMPY_VERSION=1.20.0
 
 install:
   - pip install -r requirements.txt
@@ -29,6 +33,7 @@ script:
 #   - export EXOCTK_DATA="$HOME/exoctk_data/"
 #   - chmod +x ci/install_conda.sh
 #   - chmod +x ci/setup_conda_env.sh
+#   - pip install virtualenv==16.3.0
 
 # install:
 #   - ci/install_conda.sh
