Solved NIRCam compatibility issues
Continuing to work on Issue #60.

The jwst package must be at version 1.1.0 to handle the simulated
observations currently available from STSCI. Additionally,
stdatamodels==0.2.3 and stpipe==0.2.0 were required for jwst.datamodels
at jwst==1.1.0 and these were added to requirements.txt and setup.py.

Currently, it seems the pipeline breaks for multiple segments. This is
most likely caused by how I am calling the pipeline since nothing else
relevant has changed. It seems the suffix parameter is somehow getting
set to False.

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,8 @@ pytest
 pyyaml
 requests
 scipy
+stpipe==0.2.0
+stdatamodels==0.2.3
 svo_filters
 nbsphinx
 recommonmark
@@ -18,5 +20,5 @@ myst_parser
 astroquery>=0.4.2
 asdf
 gwcs
-jwst
+jwst==1.1.0
 tqdm
