Fixing issues with requirements.txt file
Alphabetizing requirements, adding missing ones, and adding some version
requirements which I needed to be able to run Eureka on my new Mac

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,28 @@
+asdf==2.8.1
 astropy
+astroquery>=0
 batman-package
 bokeh
+corner
+dynesty
+emcee
+gwcs
 h5py
 ipython
+jwst==1.1.0
 lmfit
 matplotlib
+myst_parser
+nbsphinx
 numpy>=1.20.0
 pandas
+photutils==1.1.0
 pytest
 pyyaml
+recommonmark
 requests
 scipy
+stdatamodels==0.2.4
 stpipe==0.2.0
-stdatamodels==0.2.3
 svo_filters
-nbsphinx
-recommonmark
-myst_parser
-astroquery>=0.4.2
-asdf
-gwcs
-jwst==1.1.0
 tqdm
