--- a/requirements.txt
+++ b/requirements.txt
@@ -20,10 +20,10 @@ myst_parser
 astroquery>=0.4.2
 asdf
 gwcs
-jwst==1.1.0
+jwst==1.3.3
 tqdm
 dynesty
-photutils<=1.0.2
+photutils>=1.1.0,<1.2
 ccdproc
 emcee
 corner
