--- a/.gitignore
+++ b/.gitignore
@@ -135,3 +135,6 @@ dmypy.json
 # VS Code workspaces
 *.code-workspace
 .vscode/settings.json
+
+# Ignore installed packages for wfc3 branch
+image_registration/
