--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-asdf==2.8.1
+#asdf==2.8.1
 astropy
-astroquery>=0.4.2
+#astroquery>=0.4.2
 batman-package
 bokeh
 ccdproc
@@ -17,14 +17,14 @@ myst_parser
 nbsphinx
 numpy>=1.20.0
 pandas
-photutils>=1.1.0,<1.2
+#photutils>=1.1.0,<1.2
 pytest
-pyyaml
+#pyyaml
 recommonmark
 requests
 scipy
-stdatamodels==0.2.3
-stpipe==0.2.0
+#stdatamodels==0.2.3
+#stpipe==0.2.0
 svo_filters
 tqdm
 
