--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,3 @@
 [build-system]
-requires = ["setuptools>=40.8.0", "wheel", "numpy"]
+requires = ["setuptools>=40.8.0", "wheel", "numpy", "Cython"]
 build-backend = "setuptools.build_meta"
