--- a/.github/ISSUE_TEMPLATE/improvement-template.yml
+++ b/.github/ISSUE_TEMPLATE/improvement-template.yml
@@ -1,20 +1,12 @@
-name: Bug Report
-description: File a bug report
-title: "[Bug]: "
-labels: ["bug"]
+name: Enhancement Suggestion
+description: Suggest an enhancement to Eureka!
+title: "[Enhancement]: "
+labels: ["enhancement"]
 body:
   - type: markdown
     attributes:
       value: |
-        Thanks for taking the time to fill out this bug report!
-  - type: checkboxes
-    id: terms
-    attributes:
-      label: FAQ check
-      description: Before continuing, have you checked to see if your question has been answered in our [Frequently Asked Questions](https://eurekadocs.readthedocs.io/en/latest/faq.html)?
-      options:
-        - label: Yes, I checked the FAQ and my question has not been addressed.
-          required: true
+        Thanks for taking the time to suggest an enhancement!
   - type: input
     id: contact
     attributes:
@@ -27,7 +19,7 @@ body:
     id: instrument
     attributes:
       label: Instrument
-      description: Which instrument or piece of code were you running?
+      description: Which instrument or piece of code would you like to see improved?
       multiple: true
       options:
         - NIRISS (Stages 1-3)
@@ -39,18 +31,18 @@ body:
     validations:
       required: true
   - type: textarea
-    id: what-happened
+    id: suggestion
     attributes:
-      label: What happened?
-      description: Also tell us, what did you expect to happen?
-      placeholder: Tell us what you see!
+      label: What is your suggestion?
+      description: What feature would you like to see in Eureka?
+      placeholder: It would be super helpful if Eureka! did...
     validations:
       required: true
   - type: textarea
     id: logs
     attributes:
       label: Error traceback output
-      description: Please copy and paste the full traceback of the error you encountered.
+      description: If relevant, please copy and paste the full traceback of any errors you encountered.
   - type: checkboxes
     id: terms
     attributes:
