--- a/.github/ISSUE_TEMPLATE/blank_issue.yml
+++ b/.github/ISSUE_TEMPLATE/blank_issue.yml
@@ -4,7 +4,20 @@ body:
   - type: markdown
     attributes:
       value: |
-        Thanks for taking the time to fill out this bug report!
+        Thanks for taking the time to submit this issue!
+  - type: dropdown
+    id: instrument
+    attributes:
+      label: Instrument
+      description: Which instrument or piece of code were you running?
+      multiple: true
+      options:
+        - NIRISS (Stages 1-3)
+        - NIRSpec (Stages 1-3)
+        - NIRCam (Stages 1-3)
+        - MIRI (Stages 1-3)
+        - Light curve fitting (Stages 4-6)
+        - Other (any stage)
   - type: textarea
     id: what-happened
     attributes:
@@ -18,6 +31,22 @@ body:
     attributes:
       label: Error traceback output
       description: If relevant, please copy and paste the full traceback of any errors you encountered.
+ - type: input
+    id: OS
+    attributes:
+      label: What operating system are you using?
+      description: E.g., Windows 11; Mac OS 10.10 El Capitan
+- type: input
+    id: python_version
+    attributes:
+      label: What version of Python are you running?
+      description: If you're not sure, open a terminal with the environment you're running Eureka! in and type "python --version"
+      placeholder: E.g., Python 3.7
+- type: textarea
+    id: package_list
+    attributes:
+      label: What Python packages do you have installed?
+      description: To get a full list, open a terminal with the environment you're running Eureka! in and type "conda list". Paste the full output here.
   - type: checkboxes
     id: terms
     attributes:
