--- a/.github/ISSUE_TEMPLATE/bug-template.yml
+++ b/.github/ISSUE_TEMPLATE/bug-template.yml
@@ -6,7 +6,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        Thanks for taking the time to fill out this bug report!
+        Thanks for taking the time to fill out this bug report! After you submit this issue, check this GitHub thread for any updates/responses from the Eureka! team.
   - type: checkboxes
     id: terms
     attributes:
@@ -15,14 +15,6 @@ body:
       options:
         - label: Yes, I checked the FAQ and my question has not been addressed.
           required: true
-  - type: input
-    id: contact
-    attributes:
-      label: Contact Details
-      description: How can we get in touch with you if we need more info?
-      placeholder: ex. email@example.com
-    validations:
-      required: false
   - type: dropdown
     id: instrument
     attributes:
@@ -51,6 +43,22 @@ body:
     attributes:
       label: Error traceback output
       description: Please copy and paste the full traceback of the error you encountered.
+- type: input
+    id: OS
+    attributes:
+      label: What operating system are you using?
+      description: E.g., Windows 11; Mac OS 10.10 El Capitan
+- type: input
+    id: python_version
+    attributes:
+      label: What version of Python are you running?
+      description: If you're not sure, open a terminal with the environment you're running Eureka! in and type "python --version"
+      placeholder: E.g., Python 3.7
+- type: textarea
+    id: package_list
+    attributes:
+      label: What Python packages do you have installed?
+      description: To get a full list, open a terminal with the environment you're running Eureka! in and type "conda list". Paste the full output here.
   - type: checkboxes
     id: codeofconduct
     attributes:
