--- a/.github/ISSUE_TEMPLATE/improvement-template.yml
+++ b/.github/ISSUE_TEMPLATE/improvement-template.yml
@@ -6,15 +6,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        Thanks for taking the time to suggest an enhancement!
-  - type: input
-    id: contact
-    attributes:
-      label: Contact Details
-      description: How can we get in touch with you if we need more info?
-      placeholder: ex. email@example.com
-    validations:
-      required: false
+        Thanks for taking the time to suggest an enhancement! After you submit this issue, check this GitHub thread for any updates/responses from the Eureka! team.
   - type: dropdown
     id: instrument
     attributes:
@@ -43,6 +35,22 @@ body:
     attributes:
       label: Error traceback output
       description: If relevant, please copy and paste the full traceback of any errors you encountered.
+  - type: input
+    id: OS
+    attributes:
+      label: What operating system are you using?
+      placeholder: E.g., Windows 11; Mac OS 10.10 El Capitan
+  - type: input
+    id: python_version
+    attributes:
+      label: What version of Python are you running?
+      description: If you're not sure, open a terminal with the environment you're running Eureka! in and type "python --version"
+      placeholder: E.g., Python 3.7
+  - type: textarea
+    id: package_list
+    attributes:
+      label: What Python packages do you have installed?
+      description: To get a full list, open a terminal with the environment you're running Eureka! in and type "conda list". Paste the full output here.
   - type: checkboxes
     id: terms
     attributes:
