--- a/environment.yml
+++ b/environment.yml
@@ -15,7 +15,7 @@ dependencies:
     - emcee[version='>3.0.0']
     - george
     - gwcs
-    - h5py
+    - h5py[version='<3.2']
     - ipython
     - lmfit
     - matplotlib
