Add astraeus to environment.yml and requirements.txt

--- a/environment.yml
+++ b/environment.yml
@@ -37,3 +37,4 @@ dependencies:
         - stcal
         - stdatamodels
         - svo_filters
+        - astraeus @ git+https://github.com/kevin218/Astraeus@main#egg=astraeus
