Fixing docs with new .readthedocs.yaml file
Because Astraeus requires a specific python version that is not
consistent with the readthedocs default, the docs page has been failing
to build since we added Astraeus to Eureka.

Also adding Yoni who was missing from the copyright page.

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,28 +3,23 @@ astropy
 batman-package
 bokeh
 ccdproc
-celerite
+celerite # Needed for GP
 corner
 crds
 cython
 dynesty>1.0
 emcee>3.0.0
-george
+george # Needed for GP
 gwcs
 h5py<3.2
 ipython
 lmfit
 matplotlib
-myst_parser # Needed for documentation
-nbsphinx # Needed for documentation
 numpy>=1.20.0
 pandas
 photutils
-pytest
-recommonmark # Needed for documentation
 requests
 scipy>=1.4.0 # Needed for scipy.fft
-sphinx-rtd-theme # Needed for documentation
 stdatamodels
 svo_filters
 tqdm
