--- a/environment.yml
+++ b/environment.yml
@@ -31,7 +31,7 @@ dependencies:
     - tqdm
     - pip:
         - crds
-        - image_registration @ git+https://github.com/keflavich/image_registration.git@main#egg=image_registration
+        - image_registration @ git+https://github.com/keflavich/image_registration.git@master#egg=image_registration
         - jwst==1.3.3
         - myst-parser # Needed for documentation
         - sphinx-rtd-theme # Needed for documentation
