Fixing NIRISS flake8 issues

--- a/setup.cfg
+++ b/setup.cfg
@@ -93,6 +93,9 @@ per-file-ignores =
     **/__init__.py:F401
     # Using exec commands, so variable is actually used
     **/manageevent.py:F841
+    # Need to import cython code
+    **/niriss_extraction.py:E402
+    **/simultaneous_order_fitting.py:E402
     # Need to allow prepending to PATH
     ./demos/**/run_*.py:E402
     # Need to protect against crashes if jwst not installed
