Resolving PR edits
Added astroquery as a requirement, fixing flake8 issues, fixed bug
caused by != None comparison

--- a/setup.cfg
+++ b/setup.cfg
@@ -29,6 +29,7 @@ setup_requires =
 install_requires =
     astraeus @ git+https://github.com/kevin218/Astraeus@main
     astropy
+    astroquery
     batman-package
     bokeh
     ccdproc
