--- a/.gitignore
+++ b/.gitignore
@@ -159,6 +159,7 @@ eureka_analysis/JWST/run_eureka_demo.py
 
 # Ignores for Taylor
 *.dat
+ecfs_*
 
 # Ignore version.py to allow automated version numbering
 version.py
