Making sure eureka.__version__ is always defined
If eureka is run from the git files and not installed, the version.py
file would never have been made

--- a/setup.cfg
+++ b/setup.cfg
@@ -49,6 +49,7 @@ install_requires =
     pandas
     photutils
     scipy >= 1.4.0 # Needed for scipy.fft
+    setuptools_scm
     stdatamodels
     svo_filters
     tqdm
