Resolving ASDF bugs with tests
For some reason, jsonschema==4.10.0 breaks Stage 2, so I've added an
upper limit to avoid that issue.

--- a/setup.cfg
+++ b/setup.cfg
@@ -43,6 +43,7 @@ install_requires =
     george # Needed for GP
     gwcs
     h5py < 3.2
+    jsonschema < 4.10.0 # 4.10.0 breaks S2 ASDF stuff for some reason
     lmfit
     matplotlib
     numpy >= 1.20.0
