--- a/environment_pymc3.yml
+++ b/environment_pymc3.yml
@@ -4,44 +4,39 @@ channels:
     - defaults
 dependencies:
     - python==3.9.7
-    - asdf[version='>=2.7.1,<2.11.0'] # Needed for jwst==1.3.3
+    - asdf
     - astropy
     - batman-package
     - bokeh
     - ccdproc
-    - codecov # Required for testing
+    - celerite
     - corner
     - cython
     - dynesty[version='>1.0']
     - emcee[version='>3.0.0']
-    - flake8 # Required for testing
     - george
     - gwcs
-    - h5py
-    - ipykernel # Required for jupyter
+    - h5py[version='<3.2']
     - ipython
-    - jupyter # Required for jupyter
     - lmfit
     - matplotlib
     - mkl-service
     - nbsphinx # Needed for documentation
-    - nb_conda_kernels # Required for jupyter
     - numpy[version='>=1.20.0,<1.22']
     - pandas
     - photutils
     - pip # required for the pip installs below
-    - pytest # Required for testing
-    - pytest-cov # Required for testing
-    - pytest-doctestplus # Required for testing
-    - recommonmark # Needed for documentation
+    - pytest
     - requests
     - scipy[version='>=1.4.0'] # Needed for scipy.fft
     - tqdm
     - pip:
+        - astraeus @ git+https://github.com/kevin218/Astraeus@main#egg=astraeus
         - crds
+        - exotic-ld
         - exoplanet
-        - image_registration
-        - jwst==1.3.3
+        - image_registration @ git+https://github.com/keflavich/image_registration.git@master#egg=image_registration
+        - jwst==1.6.0
         - myst-parser # Needed for documentation
         - pymc3
         - sphinx-rtd-theme # Needed for documentation
@@ -50,4 +45,3 @@ dependencies:
         - stdatamodels
         - svo_filters
         - theano-pymc
-
