Recent pymc3 updates allow numpy==1.22

--- a/setup.cfg
+++ b/setup.cfg
@@ -46,7 +46,7 @@ install_requires =
     jsonschema < 4.10.0 # 4.10.0 breaks S2 ASDF stuff for some reason
     lmfit
     matplotlib
-    numpy>=1.20.0,<1.22 # Upper limit required for theano and starry
+    numpy>=1.20.0,<=1.22 # Upper limit required for theano, starry, and pymc3
     pandas
     photutils
     scipy >= 1.4.0 # Needed for scipy.fft
