Prepping for making PyMC3 models modular
Differentiable models will now be stored in the differentiable_models
folder

--- a/setup.cfg
+++ b/setup.cfg
@@ -119,8 +119,10 @@ per-file-ignores =
     ./demos/**/run_*.py:E402
     # Need to protect against crashes if jwst not installed
     **/test_*.py:E402
-    # Need to modify c compiler settings before installing starry
-    **/PyMC3Models.py:E402
+    # Need to modify c compiler settings before importing starry
+    **/differentiable_models/*.py:E402
+    # Need to have unused imports in the init file
+    **/differentiable_models/__init__.py:F401
     # Need to protect against crashes if hst packages not installed
     **/test_WFC3.py:F401,E402
     # Keep the unused numpy so users can pass in numpy values (e.g. np.inf)
