--- a/setup.cfg
+++ b/setup.cfg
@@ -102,6 +102,8 @@ exclude =
 per-file-ignores =
     # Need to have unused imports in the init files
     **/__init__.py:F401
+    # Need unused imports in the init files, need to mute some warnings
+    ./src/eureka/__init__.py:F401,E402
     # Using exec commands, so variable is actually used
     **/manageevent.py:F841
     # Need to allow prepending to PATH
