--- a/environment.yml
+++ b/environment.yml
@@ -7,7 +7,7 @@ dependencies:
     - asdf
     - astropy
     - batman-package
-    - bokeh
+    - bokeh[version=='2.4.3']
     - ccdproc
     - celerite
     - corner
