added setup edit

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,7 +30,7 @@ install_requires =
     astropy
     astroquery
     batman-package
-    bokeh
+    bokeh < 3.0
     ccdproc
     celerite # Needed for GP
     corner
