Adding upper limit to starry
starry is likely to eventually release a version 2 which uses aesara
rather than theano, so I'm capping it's version below 2

--- a/setup.cfg
+++ b/setup.cfg
@@ -85,7 +85,7 @@ pymc3 =
     exoplanet
     # mkl-service # Needed for theano - only available by conda install mkl-service
     pymc3
-    starry>=1
+    starry>=1,<2
     theano-pymc
 jupyter =
     jupyter
