Adding citations to pymc3, exoplanet, and starry

--- a/setup.cfg
+++ b/setup.cfg
@@ -131,3 +131,5 @@ per-file-ignores =
     **/hst_scan.py:E241
     # Temporarily ignore unused s1 error until we have an S1 test
     **/test_MIRI.py:F401,E402
+    # Ignore over length bibtex lines
+    ./src/eureka/lib/citations.py:E501
