--- a/setup.cfg
+++ b/setup.cfg
@@ -62,12 +62,11 @@ where = src
 
 [options.extras_require]
 jwst =
-    jwst==1.6.0
+    jwst==1.8.3
     stcal >= 1.0.0 # Needed for our create_integration_model function
     asdf
 hst =
-    # Need the GitHub version as 0.2.6 is required for python>=3.10, but 0.2.6 is not yet on PyPI
-    image_registration @ git+https://github.com/keflavich/image_registration@master
+    image_registration==0.2.6
 docs =
     myst-parser
     nbsphinx
