Updating image_registration package
Also rolling back jwst package change as PR #484 already addresses this

--- a/environment_pymc3.yml
+++ b/environment_pymc3.yml
@@ -35,7 +35,7 @@ dependencies:
         - crds
         - exotic-ld
         - exoplanet
-        - image_registration @ git+https://github.com/keflavich/image_registration.git@master#egg=image_registration
+        - image_registration==0.2.6
         - jwst==1.6.0
         - myst-parser # Needed for documentation
         - pymc3
