Minor flake8 fixes

--- a/setup.cfg
+++ b/setup.cfg
@@ -103,6 +103,8 @@ exclude =
     ./docs/**/*
     # Ignore VS Code files
     .vscode/*
+    # Ignore files in my ecfs folder
+    ./ecfs/*
     # Ignore run_eureka.py files in demos folder
     **/run_eureka*.py
     # Temporarily ignore NIRISS files
