--- a/environment.yml
+++ b/environment.yml
@@ -21,7 +21,7 @@ dependencies:
     - lmfit
     - matplotlib
     - nbsphinx # Needed for documentation
-    - numpy[version='>=1.20.0']
+    - numpy[version='>=1.20.0,<=1.24'] # Upper limit needed for Apple silicon
     - pandas
     - photutils
     - pip # required for the pip installs below
