--- a/.github/workflows/pytest_testing.yml
+++ b/.github/workflows/pytest_testing.yml
@@ -23,6 +23,10 @@ jobs:
           python-version: 3.9
       - name: Setup Environment
         run: |
+          gcc --version
+          sudo apt update
+          sudo apt upgrade gcc
+          gcc --version
           python -m pip install --upgrade pip
           pip install .[jwst,hst,pymc3,test]
           conda install mkl-service
