Add matplotlib lower limit to installation
Resolves #560

--- a/setup.cfg
+++ b/setup.cfg
@@ -42,7 +42,7 @@ install_requires =
     george # Needed for GP
     h5py
     lmfit
-    matplotlib
+    matplotlib>=3.6 # Lower limit needed for set_layout_engine()
     numpy>=1.20.0,<1.25 # Upper limit needed to avoid deprecations
     pandas
     photutils
