--- a/environment.yml
+++ b/environment.yml
@@ -20,7 +20,7 @@ dependencies:
     - ipython
     - jupyter
     - lmfit
-    - matplotlib
+    - matplotlib[version='>=3.6'] # Lower limit needed for set_layout_engine()
     - nbsphinx # Needed for documentation
     - numpy[version='>=1.20.0,<=1.23'] # Upper limit needed for Apple silicon
     - numpydoc # Needed for documentation
