--- a/environment_pymc3.yml
+++ b/environment_pymc3.yml
@@ -21,7 +21,7 @@ dependencies:
     - ipython
     - jupyter
     - lmfit
-    - matplotlib
+    - matplotlib[version='>=3.6'] # Lower limit needed for set_layout_engine()
     - mkl-service
     - nbsphinx # Needed for documentation
     - numpy[version='>=1.20.0,<1.22'] # Upper limit needed for Apple silicon and for theano, starry, and pymc3
