Relabel to JWST

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = eureka
 author = Eureka! pipeline developers
 author_email = kbstevenson@gmail.com
-description = A data reduction and analysis pipeline intended for time-series observations with the James Webb Space Telescope (JWST).
+description = A data reduction and analysis pipeline intended for time-series observations with JWST.
 long_description = file: README.md
 long_description_content_type = text/markdown
 license = MIT License
