Upgrading jwst package version
Bumping jwst package version to 1.11.4 (since >=1.12 won't currently work with theano due to a numpy version conflict)

--- a/setup.cfg
+++ b/setup.cfg
@@ -60,7 +60,7 @@ where = src
 
 [options.extras_require]
 jwst =
-    jwst==1.10.2
+    jwst==1.11.4
     stcal>=1.0.0 # Lower limit needed for our create_integration_model function
 hst =
     image_registration@git+https://github.com/keflavich/image_registration@master # Need GitHub version to avoid np.float issue
@@ -87,6 +87,7 @@ pymc3 =
     opencv-python<4.8 # Upper limit needed for numpy<1.22
     opencv-python-headless<4.8 # Upper limit needed for numpy<1.22
     scipy>=1.4.0,<1.8.0 # Lower limit needed for scipy.fft, upper limit needed for theano, starry, and pymc3
+    xarray<2023.10.0 # Upper limit needed for numpy<1.22
 jupyter =
     jupyter
     ipykernel
