--- a/setup.cfg
+++ b/setup.cfg
@@ -32,7 +32,7 @@ install_requires =
     batman-package
     bokeh<3.0
     ccdproc
-    celerite # Needed for GP
+    celerite2 # Needed for GP
     corner
     crds
     cython
