--- a/environment_pymc3.yml
+++ b/environment_pymc3.yml
@@ -1,4 +1,4 @@
-name: eureka_starry
+name: eureka_starry2
 channels:
     - conda-forge
     - defaults
@@ -11,7 +11,6 @@ dependencies:
     - ccdproc
     - celerite # Needed for GP
     - corner
-    - cython
     - dynesty[version='>1.0'] # Lower limit needed for specific arguments
     - emcee[version='>3.0.0'] # Lower limit needed for specific arguments
     - flake8 # Needed for testing
@@ -43,7 +42,7 @@ dependencies:
         - exoplanet
         - exotic-ld
         - image_registration@git+https://github.com/keflavich/image_registration@master # Need GitHub version to avoid np.float issue
-        - jwst==1.10.2
+        - jwst==1.11.4
         - myst-parser # Needed for documentation
         - opencv-python<4.8 # Upper limit needed for numpy<1.22
         - opencv-python-headless<4.8 # Upper limit needed for numpy<1.22
