Removed cython and tweaked license_files in setup

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ description = A data reduction and analysis pipeline intended for time-series ob
 long_description = file: README.md
 long_description_content_type = text/markdown
 license = MIT License
-license_file = LICENSE
+license_files = [LICENSE,]
 url = https://github.com/kevin218/Eureka
 project_urls =
     Bug Tracker = https://github.com/kevin218/Eureka/issues
@@ -33,7 +33,6 @@ install_requires =
     celerite # Needed for GP
     corner
     crds
-    cython
     dynesty>1.0 # Lower limit needed for specific arguments
     emcee>3.0.0 # Lower limit needed for specific arguments
     exotic-ld
