Test new setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -74,6 +74,8 @@ test =
     pytest-cov
     pytest-doctestplus
 pymc3 =
+    jwst==1.11.4
+    stcal>=1.0.0 # Lower limit needed for our create_integration_model function
     exoplanet
     # mkl-service # Needed for theano - only available by conda install mkl-service
     pymc3
