Switching to using the newer celerite2
This commit resolves #608

This will later allow us to use celerite2 with PyMC3 fitters/models, and also fixes some annoying bugs caused by celerite.

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,7 +30,7 @@ install_requires =
     batman-package
     bokeh<3.0
     ccdproc
-    celerite # Needed for GP
+    celerite2 # Needed for GP
     corner
     crds
     dynesty>1.0 # Lower limit needed for specific arguments
