--- a/environment.yml
+++ b/environment.yml
@@ -20,6 +20,7 @@ dependencies:
     - jupyter
     - lmfit
     - matplotlib[version='>=3.6'] # Lower limit needed for set_layout_engine()
+    - mc3 # Needed for uncertainties in the Allan variance plots in S5
     - nbsphinx # Needed for documentation
     - numpy[version='>=1.20.0,<=1.23'] # Upper limit needed for Apple silicon
     - numpydoc # Needed for documentation
