--- a/environment_pymc3.yml
+++ b/environment_pymc3.yml
@@ -21,6 +21,7 @@ dependencies:
     - jupyter
     - lmfit
     - matplotlib[version='>=3.6'] # Lower limit needed for set_layout_engine()
+    - mc3 # Needed for uncertainties in the Allan variance plots in S5
     - mkl-service
     - nbsphinx # Needed for documentation
     - numpy[version='>=1.20.0,<1.22'] # Upper limit needed for Apple silicon and for theano, starry, and pymc3
