--- a/setup.cfg
+++ b/setup.cfg
@@ -40,6 +40,7 @@ install_requires =
     h5py
     lmfit
     matplotlib>=3.6 # Lower limit needed for set_layout_engine()
+    mc3 # Needed for uncertainties in the Allan variance plots in S5
     numpy>=1.20.0,<1.25 # Upper limit needed to avoid deprecations
     pandas
     photutils
