--- a/environment.yml
+++ b/environment.yml
@@ -37,7 +37,7 @@ dependencies:
     - pip:
         - astraeus@git+https://github.com/kevin218/Astraeus@main
         - crds
-        - exotic-ld
+        - exotic-ld>=3.1.2 # Lower limit needed for updated JWST sensitivity files
         - image_registration@git+https://github.com/keflavich/image_registration@master # Need GitHub version to avoid np.float issue
         - jwst==1.11.4
         - myst-parser # Needed for documentation
