--- a/setup.cfg
+++ b/setup.cfg
@@ -35,7 +35,7 @@ install_requires =
     crds
     dynesty>1.0 # Lower limit needed for specific arguments
     emcee>3.0.0 # Lower limit needed for specific arguments
-    exotic-ld
+    exotic-ld>=3.1.2 # Lower limit needed for updated JWST sensitivity files
     george # Needed for GP
     h5py
     lmfit
