--- a/.github/workflows/pytest_testing.yml
+++ b/.github/workflows/pytest_testing.yml
@@ -35,10 +35,13 @@ jobs:
         run: pytest tests --cov=./src/eureka --cov-report=xml
       - name: Upload coverage reports to Codecov with GitHub Action
         uses: codecov/codecov-action@v4
-        env:
-          CODECOV_TOKEN: ${{secrets.CODECOV_TOKEN}}
         with:
           env_vars: OS,PYTHON
           files: ./coverage.xml
           fail_ci_if_error: true
           verbose: true
+          CODECOV_TOKEN: ${{secrets.CODECOV_TOKEN}}
+      run: |
+        curl -Os https://uploader.codecov.io/latest/linux/codecov
+        chmod +x codecov
+        ./codecov -t ${CODECOV_TOKEN}
