--- a/.github/workflows/pytest_testing.yml
+++ b/.github/workflows/pytest_testing.yml
@@ -41,7 +41,7 @@ jobs:
           fail_ci_if_error: true
           verbose: true
           CODECOV_TOKEN: ${{secrets.CODECOV_TOKEN}}
-        run: |
-          curl -Os https://uploader.codecov.io/latest/linux/codecov
-          chmod +x codecov
-          ./codecov -t ${CODECOV_TOKEN}
+        # run: |
+        #   curl -Os https://uploader.codecov.io/latest/linux/codecov
+        #   chmod +x codecov
+        #   ./codecov -t ${CODECOV_TOKEN}
