Fixed pytest version bug with pymc3 code. More testing
Added testing for centroid models in PyMC3 and numpy codes, added S5 testing for photometry.

Also pytest>=8 doesn't seem to work at all if the pymc3 code is installed, so just setting an upper-limit of <8 since we don't need newer versions of that package

--- a/environment.yml
+++ b/environment.yml
@@ -27,7 +27,7 @@ dependencies:
     - pandas
     - photutils
     - pip # required for the pip installs below
-    - pytest # Needed for testing
+    - pytest[version='<8.0'] # Upper limit needed to avoid some conflict between pytest, an asdf package, and something in the pymc3 set of installs. Needed for testing
     - pytest-cov # Needed for testing
     - pytest-doctestplus # Needed for testing
     - requests
