--- a/setup.cfg
+++ b/setup.cfg
@@ -71,7 +71,7 @@ docs =
     sphinx-rtd-theme
 test =
     flake8
-    pytest
+    pytest<8.0 # Upper limit needed to avoid some conflict between pytest, an asdf package, and something in the pymc3 set of installs
     pytest-cov
     pytest-doctestplus
 pymc3 =
