--- a/setup.cfg
+++ b/setup.cfg
@@ -58,7 +58,7 @@ where = src
 
 [options.extras_require]
 jwst =
-    jwst==1.15.2
+    jwst==1.15.1
     stcal>=1.0.0 # Lower limit needed for our create_integration_model function
 hst =
     image_registration@git+https://github.com/keflavich/image_registration@master # Need GitHub version to avoid np.float issue
@@ -75,6 +75,7 @@ test =
     pytest-cov
     pytest-doctestplus
 pymc3 =
+    arviz==0.12.1
     jwst==1.11.4
     stcal>=1.0.0 # Lower limit needed for our create_integration_model function
     exoplanet
