--- a/setup.cfg
+++ b/setup.cfg
@@ -36,6 +36,7 @@ install_requires =
     dynesty>1.0 # Lower limit needed for specific arguments
     emcee>3.0.0 # Lower limit needed for specific arguments
     exotic-ld==3 # Lower limit needed for updated JWST sensitivity files, upper limit needed for breaking changes
+    fleck
     george # Needed for GP
     h5py
     lmfit
