--- a/setup.cfg
+++ b/setup.cfg
@@ -29,6 +29,7 @@ install_requires =
     astroquery
     batman-package
     bokeh<3.0
+    catwoman
     ccdproc
     celerite2 # Needed for GP
     corner
