Resolving issue caused by crds==12.0.0

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,7 +32,7 @@ install_requires =
     ccdproc
     celerite2 # Needed for GP
     corner
-    crds
+    crds<12 # Upper limit needed to avoid bugs with crds.get_context_name
     dynesty>1.0 # Lower limit needed for specific arguments
     emcee>3.0.0 # Lower limit needed for specific arguments
     exotic-ld==3.2.0 # Lower limit needed for updated JWST sensitivity files, upper limit needed for breaking changes
