--- a/environment.yml
+++ b/environment.yml
@@ -37,7 +37,7 @@ dependencies:
     - pip:
         - astraeus@git+https://github.com/kevin218/Astraeus@main
         - celerite2 # Needed for GP
-        - crds
+        - crds<12 # Upper limit needed to avoid bugs with crds.get_context_name
         - exotic-ld==3.2.0 # Lower limit needed for updated JWST sensitivity files, upper limit needed for breaking changes
         - fleck
         - image_registration@git+https://github.com/keflavich/image_registration@master # Need GitHub version to avoid np.float issue
