--- a/environment_pymc3.yml
+++ b/environment_pymc3.yml
@@ -40,7 +40,7 @@ dependencies:
         - arviz==0.12.1
         - astraeus@git+https://github.com/kevin218/Astraeus@main
         - celerite2 # Needed for GP
-        - crds
+        - crds<12 # Upper limit needed to avoid bugs with crds.get_context_name
         - exoplanet
         - exoplanet-core
         - exotic-ld==3.2.0 # Lower limit needed for updated JWST sensitivity files, upper limit needed for breaking changes
