Fixing catwoman installation

--- a/environment.yml
+++ b/environment.yml
@@ -36,7 +36,7 @@ dependencies:
     - tqdm
     - pip:
         - astraeus@git+https://github.com/kevin218/Astraeus@main
-        - catwoman
+        - catwoman@git+https://github.com/taylorbell57/catwoman@master
         - celerite2 # Needed for GP
         - crds
         - exotic-ld==3.2.0 # Lower limit needed for updated JWST sensitivity files, upper limit needed for breaking changes
