--- a/environment_pymc3.yml
+++ b/environment_pymc3.yml
@@ -39,7 +39,7 @@ dependencies:
     - pip:
         - arviz==0.12.1
         - astraeus@git+https://github.com/kevin218/Astraeus@main
-        - catwoman
+        - catwoman@git+https://github.com/taylorbell57/catwoman@master
         - celerite2 # Needed for GP
         - crds
         - exoplanet
