--- a/setup.cfg
+++ b/setup.cfg
@@ -29,7 +29,7 @@ install_requires =
     astroquery
     batman-package
     bokeh<3.0
-    catwoman
+    catwoman@git+https://github.com/taylorbell57/catwoman@master
     ccdproc
     celerite2 # Needed for GP
     corner
