Adding jax optional installs

--- a/setup.cfg
+++ b/setup.cfg
@@ -75,6 +75,9 @@ test =
     pytest<8.0 # Upper limit needed to avoid some conflict between pytest, an asdf package, and something in the pymc3 set of installs
     pytest-cov
     pytest-doctestplus
+jax =
+    jax[cpu]
+    jaxoplanet@git+https://github.com/exoplanet-dev/jaxoplanet@main
 pymc3 =
     arviz==0.12.1
     jwst==1.11.4
