Enabling aperture_edge=exact for phot_method=optimal

--- a/setup.cfg
+++ b/setup.cfg
@@ -50,6 +50,7 @@ install_requires =
     requests
     scipy>=1.8.0 # Lower limit needed for scipy.spatial.QhullError
     setuptools_scm
+    shapely
     stdatamodels
     svo_filters
     tqdm
