--- a/environment.yml
+++ b/environment.yml
@@ -32,6 +32,7 @@ dependencies:
     - pytest-doctestplus # Needed for testing
     - requests
     - scipy[version='>=1.8.0'] # Lower limit needed for scipy.spatial.QhullError
+    - shapely
     - sphinx # Needed for documentation
     - sphinx-automodapi # Needed for documentation
     - tqdm
