Ignoring some super spammy UserWarnings from matplotlib
Ignoring the "figure with num: #### already exists" UserWarnings

--- a/setup.cfg
+++ b/setup.cfg
@@ -118,6 +118,8 @@ per-file-ignores =
     **/__init__.py:F401
     # Need unused imports in the init files, need to mute some warnings
     ./src/eureka/__init__.py:F401,E402
+    # Want to suppress the "figure with num: #### already exists" UserWarnings
+    ./src/eureka/**/plots*.py:E402
     # Using exec commands, so variable is actually used
     **/manageevent.py:F841
     # Need to allow prepending to PATH
