Adding a rwddt installation option

--- a/setup.cfg
+++ b/setup.cfg
@@ -28,12 +28,14 @@ install_requires =
     astropy
     astroquery
     batman-package
-    bokeh<3.0
+    # bokeh<3.0
+    bokeh
     catwoman@git+https://github.com/taylorbell57/catwoman@master
     ccdproc
     celerite2 # Needed for GP
     corner
-    crds<12 # Upper limit needed to avoid bugs with crds.get_context_name
+    # crds<12 # Upper limit needed to avoid bugs with crds.get_context_name
+    crds
     dynesty>1.0 # Lower limit needed for specific arguments
     emcee>3.0.0 # Lower limit needed for specific arguments
     exotic-ld==3.2.0 # Lower limit needed for updated JWST sensitivity files, upper limit needed for breaking changes
@@ -43,7 +45,8 @@ install_requires =
     lmfit
     matplotlib>=3.6 # Lower limit needed for set_layout_engine()
     mc3 # Needed for uncertainties in the Allan variance plots in S5
-    numpy>=1.20.0,<1.25 # Upper limit needed for Apple silicon
+    # numpy>=1.20.0,<1.25 # Upper limit needed for Apple silicon
+    numpy>=1.20.0
     pandas
     pastasoss
     photutils
@@ -60,8 +63,24 @@ where = src
 
 
 [options.extras_require]
+rwddt =
+    crds==12.0.9
+    flake8
+    image_registration@git+https://github.com/keflavich/image_registration@master # Need GitHub version to avoid np.float issue
+    ipykernel
+    ipython
+    jupyter
+    jwst==1.17.1
+    numpy==1.26.4
+    pastasoss>=1.2.1
+    pytest<8.0 # Upper limit needed to avoid some conflict between pytest, an asdf package, and something in the pymc3 set of installs
+    pytest-cov
+    pytest-doctestplus
+    stcal==1.11.0
+    stdatamodels==2.2.0
+    scipy==1.15.1
 jwst =
-    jwst==1.15.1
+    jwst==1.17.1
     stcal>=1.0.0 # Lower limit needed for our create_integration_model function
 hst =
     image_registration@git+https://github.com/keflavich/image_registration@master # Need GitHub version to avoid np.float issue
