Adds initial Harmonica code to Stage 5

--- a/setup.cfg
+++ b/setup.cfg
@@ -47,6 +47,7 @@ install_requires =
     pandas
     pastasoss>=1.2.1
     photutils
+    planet-harmonica
     requests
     scipy>=1.8.0 # Lower limit needed for scipy.spatial.QhullError
     setuptools_scm
