--- a/environment_pymc3.yml
+++ b/environment_pymc3.yml
@@ -53,6 +53,7 @@ dependencies:
         - myst-parser # Needed for documentation
         - numpy>=1.20.0,<1.22 # Upper limit needed for Apple silicon and for theano, starry, and pymc3
         - opencv-python-headless<4.8 # Upper limit needed for numpy<1.22
+        - planet-harmonica
         - pymc3
         - scipy>=1.8.0 # Lower limit needed for scipy.spatial.QhullError
         - setuptools_scm # Needed for version number
