Updating setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -28,13 +28,11 @@ install_requires =
     astropy
     astroquery
     batman-package
-    # bokeh<3.0
     bokeh
     catwoman@git+https://github.com/KathrynJones1/catwoman@master
     ccdproc
     celerite2 # Needed for GP
     corner
-    # crds<12 # Upper limit needed to avoid bugs with crds.get_context_name
     crds
     dynesty>1.0 # Lower limit needed for specific arguments
     emcee>3.0.0 # Lower limit needed for specific arguments
@@ -45,7 +43,6 @@ install_requires =
     lmfit
     matplotlib>=3.6 # Lower limit needed for set_layout_engine()
     mc3 # Needed for uncertainties in the Allan variance plots in S5
-    # numpy>=1.20.0,<1.25 # Upper limit needed for Apple silicon
     numpy>=1.20.0
     pandas
     pastasoss>=1.2.2 # Lower limit needed to allow for support with pymc3
@@ -67,7 +64,7 @@ where = src
 rwddt =
     crds==12.1.4
     flake8
-    image_registration@git+https://github.com/keflavich/image_registration@master # Need GitHub version to avoid np.float issue
+    image_registration@git+https://github.com/keflavich/image_registration@70e3880 # Need GitHub version to avoid np.float issue
     ipykernel
     ipython
     jupyter
@@ -81,7 +78,7 @@ rwddt =
     stdatamodels==3.0.2
     scipy==1.15.2
 jwst =
-    jwst==1.17.1
+    jwst==1.18.0
     stcal>=1.0.0 # Lower limit needed for our create_integration_model function
 hst =
     image_registration@git+https://github.com/keflavich/image_registration@master # Need GitHub version to avoid np.float issue
