Addressing PR edit requests and flake8 tweaks

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,7 +22,7 @@ package_dir =
     =src
 packages = find:
 zip_safe = True
-python_requires= >=3.11
+python_requires= >=3.11,<3.14
 install_requires =
     astraeus@git+https://github.com/kevin218/Astraeus@main
     astropy
