--- a/environment.yml
+++ b/environment.yml
@@ -3,28 +3,26 @@ channels:
     - conda-forge
     - defaults
 dependencies:
-    - python==3.11.0
+    - python==3.13.0
     - astropy
     - astroquery
-    - batman-package
     - bokeh[version='<3.0']
     - ccdproc
     - corner
     - dynesty[version='>1.0'] # Lower limit needed for specific arguments
     - emcee[version='>3.0.0'] # Lower limit needed for specific arguments
     - flake8 # Needed for testing
-    - george # Needed for GP
     - h5py
     - ipykernel
+    - ipympl # Needed for the interactive matplotlib backend
     - ipython
     - jupyter
     - lmfit
     - matplotlib[version='>=3.6'] # Lower limit needed for set_layout_engine()
     - nbsphinx # Needed for documentation
-    - numpy[version='>=1.20.0,<=1.23'] # Upper limit needed for Apple silicon
+    - numpy[version='>=1.20.0']
     - numpydoc # Needed for documentation
     - pandas
-    - pastasoss[version='>=1.2.1']
     - photutils
     - pip # required for the pip installs below
     - pytest[version='<8.0'] # Upper limit needed to avoid some conflict between pytest, an asdf package, and something in the pymc3 set of installs. Needed for testing
@@ -38,16 +36,19 @@ dependencies:
     - tqdm
     - pip:
         - astraeus@git+https://github.com/kevin218/Astraeus@main
+        - batman-package
         - catwoman@git+https://github.com/taylorbell57/catwoman@master
         - celerite2 # Needed for GP
-        - crds<12 # Upper limit needed to avoid bugs with crds.get_context_name
+        - crds
         - exotic-ld==3.2.0 # Lower limit needed for updated JWST sensitivity files, upper limit needed for breaking changes
         - fleck
+        - george # Needed for GP
         - image_registration@git+https://github.com/keflavich/image_registration@master # Need GitHub version to avoid np.float issue
-        - jwst==1.15.1
+        - jwst==1.18.0
         - mc3 # Needed for uncertainties in the RMS time-averaging plots in S5
         - myst-parser # Needed for documentation
-        - numpy>=1.20.0,<=1.23 # Upper limit needed for Apple silicon and for theano, starry, and pymc3
+        - numpy>=1.20.0
+        - pastasoss>=1.2.2
         - scipy>=1.8.0 # Lower limit needed for scipy.spatial.QhullError
         - setuptools_scm # Needed for version number
         - sphinx-rtd-theme # Needed for documentation
