--- a/environment_pymc3.yml
+++ b/environment_pymc3.yml
@@ -3,7 +3,7 @@ channels:
     - conda-forge
     - defaults
 dependencies:
-    - python==3.11.0
+    - python==3.10.14
     - asdf[version='>=2.15.0'] # Lower limit needed when installing theano, starry, and pymc3
     - astropy
     - astroquery
@@ -17,16 +17,16 @@ dependencies:
     - george # Needed for GP
     - h5py
     - ipykernel
+    - ipympl # Needed for the interactive matplotlib backend
     - ipython
     - jupyter
     - lmfit
     - matplotlib[version='>=3.6'] # Lower limit needed for set_layout_engine()
-    - mkl-service
+    - mkl-service # Note, only allowed for intel processors...
     - nbsphinx # Needed for documentation
-    - numpy[version='>=1.20.0,<1.22'] # Upper limit needed for Apple silicon and for theano, starry, and pymc3
+    - numpy[version='>=1.20.0,<1.22'] # Upper limit needed for theano, starry, and pymc3
     - numpydoc # Needed for documentation
     - pandas
-    - pastasoss[version='>=1.2.1']
     - photutils
     - pip # required for the pip installs below
     - pytest[version='<8.0'] # Upper limit needed to avoid some conflict between pytest, an asdf package, and something in the pymc3 set of installs. Needed for testing
@@ -43,7 +43,7 @@ dependencies:
         - astraeus@git+https://github.com/kevin218/Astraeus@main
         - catwoman@git+https://github.com/taylorbell57/catwoman@master
         - celerite2 # Needed for GP
-        - crds<12 # Upper limit needed to avoid bugs with crds.get_context_name
+        - crds
         - exoplanet
         - exoplanet-core
         - exotic-ld==3.2.0 # Lower limit needed for updated JWST sensitivity files, upper limit needed for breaking changes
@@ -52,8 +52,9 @@ dependencies:
         - jwst==1.11.4
         - mc3 # Needed for uncertainties in the RMS time-averaging plots in S5
         - myst-parser # Needed for documentation
-        - numpy>=1.20.0,<1.22 # Upper limit needed for Apple silicon and for theano, starry, and pymc3
+        - numpy>=1.20.0,<1.22 # Upper limit needed for theano, starry, and pymc3
         - opencv-python-headless<4.8 # Upper limit needed for numpy<1.22
+        - pastasoss>=1.2.2
         - pymc3
         - scipy>=1.8.0 # Lower limit needed for scipy.spatial.QhullError
         - setuptools_scm # Needed for version number
