Updating installation requirements

--- a/setup.cfg
+++ b/setup.cfg
@@ -62,21 +62,22 @@ where = src
 
 [options.extras_require]
 rwddt =
-    crds==12.1.4
+    crds==12.1.5
     flake8
     image_registration@git+https://github.com/keflavich/image_registration@70e3880 # Need GitHub version to avoid np.float issue
     ipykernel
+    ipympl # Needed for the interactive matplotlib backend
     ipython
     jupyter
     jwst==1.18.0
     numpy==1.26.4
-    pastasoss>=1.2.1
+    pastasoss==1.2.2
     pytest<8.0 # Upper limit needed to avoid some conflict between pytest, an asdf package, and something in the pymc3 set of installs
     pytest-cov
     pytest-doctestplus
+    scipy==1.15.2
     stcal==1.12.0
     stdatamodels==3.0.2
-    scipy==1.15.2
 jwst =
     jwst==1.18.0
     stcal>=1.0.0 # Lower limit needed for our create_integration_model function
