--- a/setup.cfg
+++ b/setup.cfg
@@ -47,9 +47,10 @@ install_requires =
     pandas
     pastasoss>=1.2.2 # Lower limit needed to allow for support with pymc3
     photutils
-    planet-harmonica
+    # planet-harmonica
+    planet-harmonica@git+https://github.com/DavoGrant/harmonica@main
     requests
-    scipy>=1.8.0 # Lower limit needed for scipy.spatial.QhullError
+    scipy>=1.12.0 # Lower limit needed for stcal.ramp_fitting.likely_fit
     setuptools_scm
     shapely
     stdatamodels
