Increasing lower limit on jaxoplanet version

--- a/setup.cfg
+++ b/setup.cfg
@@ -80,7 +80,7 @@ test =
     pytest-doctestplus
 jax =
     jax[cpu]
-    jaxoplanet@git+https://github.com/exoplanet-dev/jaxoplanet@main
+    jaxoplanet>=0.1.0
 pymc3 =
     arviz==0.12.1
     jwst==1.11.4
