Adding first working version of JaxoplanetTransitModel

--- a/setup.cfg
+++ b/setup.cfg
@@ -81,6 +81,9 @@ test =
 jax =
     jax[cpu]
     jaxoplanet>=0.1.0
+    jaxopt
+    numpyro
+    numpyro_ext
 pymc3 =
     arviz==0.12.1
     jwst==1.11.4
