Adding most of the rest of the jax models
Most models seem to work well now (polynomial, exponential ramp, and centroid have specifically been tested). The celerite2.jax GP model is currently failing, but it is also failing in the same way on the celerite2 docs pages, so I don't think that's an issue on my end.

--- a/setup.cfg
+++ b/setup.cfg
@@ -138,6 +138,8 @@ per-file-ignores =
     **/differentiable_models/*.py:E402
     # Need to have unused imports in the init file
     **/differentiable_models/__init__.py:F401
+    # Need to modify jax settings before importing celerite2.jax
+    **/jax_models/JaxModel.py:E402
     # Need to protect against crashes if hst packages not installed
     **/test_WFC3.py:F401,E402
     # Keep the unused numpy so users can pass in numpy values (e.g. np.inf)
