Adding harmonica.jax support

--- a/setup.cfg
+++ b/setup.cfg
@@ -136,6 +136,8 @@ per-file-ignores =
     ./demos/**/run_*.py:E402
     # Need to protect against crashes if jwst not installed
     **/test_*.py:E402
+    # Need to have unused imports in the AstroModel
+    **/models/AstroModel.py:F401
     # Need to modify c compiler settings before importing starry
     **/differentiable_models/*.py:E402
     # Need to have unused imports in the init file
