Updating fleck version to that on GitHub
The pip version was 2 years out-of-date

--- a/environment.yml
+++ b/environment.yml
@@ -41,7 +41,7 @@ dependencies:
         - celerite2 # Needed for GP
         - crds
         - exotic-ld==3.2.0 # Lower limit needed for updated JWST sensitivity files, upper limit needed for breaking changes
-        - fleck
+        - fleck@git+https://github.com/bmorris3/fleck.git@main
         - george # Needed for GP
         - image_registration@git+https://github.com/keflavich/image_registration@master # Need GitHub version to avoid np.float issue
         - jwst==1.18.0
