Removing the now fully deprecated PyMC3 code

--- a/setup.cfg
+++ b/setup.cfg
@@ -81,25 +81,12 @@ test =
     pytest-cov
     pytest-doctestplus
 jax =
+    arviz
     jax[cpu]
     jaxoplanet>=0.1.0
     jaxopt
     numpyro
     numpyro_ext
-pymc3 =
-    arviz==0.12.1
-    jwst==1.11.4
-    stcal>=1.0.0 # Lower limit needed for our create_integration_model function
-    exoplanet
-    exoplanet_core
-    # mkl-service # Needed for theano - only available by conda install mkl-service
-    pymc3
-    starry>=1,<2
-    theano-pymc
-    # Extra version limits
-    numpy>=1.20.0,<1.22 # Upper limit needed for theano, starry, and pymc3
-    opencv-python-headless<4.8 # Upper limit needed for numpy<1.22
-    xarray<2023.10.0 # Upper limit needed for numpy<1.22
 jupyter =
     ipykernel
     ipympl # Needed for the interactive matplotlib backend
